# sjik

./: .gitignore  .gitmodules  Cargo.toml  setup-env.ps1
dioxus-beuk/: Cargo.toml
dioxus-beuk/examples/: boxes.rs
dioxus-beuk/src/: application.rs  events.rs  focus.rs  image.rs  layout.rs  lib.rs  mouse.rs  paint.rs  render.rs  renderer.rs  shader.frag  shader.vert  util.rs
dioxus-beuk/src/hooks/: use_animation.rs
dioxus-beuk/src/style/: font.rs  mod.rs  tailwind.rs
dioxus-beuk/src/style/background/: gradient.rs  linear_gradient.rs  mod.rs  radial_gradient.rs
src/: decoder.rs  main.rs  shader.frag  shader.vert  ui.rs
src/media_decoder/: mod.rs
src/media_render_pass/: mod.rs  shader.frag
src/present_render_pass/: mod.rs  shader.frag  shader.vert
src/ui/: mod.rs
src/ui_render_pass/: el.rs  mod.rs  scratch.rs  shader.frag  shader.vert  tailwind.rs  ui_render.rs
