[package]
name = "sjik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beuk = { git = "https://github.com/dylanblokhuis/beuk", rev = "92517928827356123cb72197797497a7936fba38" }
tao = { version = "0.21.0", features = ["serde"] }
bytemuck = { version = "1.13", features = ["derive"] }
stainless_ffmpeg = { path = "./stainless-ffmpeg" }
dioxus_beuk = { path = "./dioxus-beuk" }
cpal = "0.15.2"
log = "0.4.19"
spin_sleep = "1.1.1"
ringbuf = "0.3.3"
simple_logger = "4.2.0"
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8"
once_cell = "1.18.0"
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-hot-reload = { git = "https://github.com/DioxusLabs/dioxus/", features = ["file_watcher"] }

[workspace]
members = [
    "stainless-ffmpeg",
    "dioxus-beuk",
]