[package]
name = "sjik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beuk = { path = "../beuk" }
tao = { version = "0.22.0", features = ["serde"] }
bytemuck = { version = "1.13", features = ["derive"] }
stainless_ffmpeg = { path = "./stainless-ffmpeg" }
dioxus_beuk = { path = "./dioxus-beuk" }
cpal = "0.15.2"
log = "0.4"
spin_sleep = "1.1.1"
ringbuf = "0.3.3"
simple_logger = "4.2.0"
crossbeam-channel = "0.5.8"
once_cell = "1.18.0"
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
tracing-tracy = { version = "0.10", optional = true }

[workspace]
members = [
    "stainless-ffmpeg",
    "dioxus-beuk",
]

[features]
hot-reload = ["dioxus_beuk/hot-reload"]
tracing = ["tracing-tracy", "tracing-subscriber"]
