[package]
name = "dioxus_beuk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus/", features = ["dioxus"] }
dioxus-native-core-macro = { git = "https://github.com/DioxusLabs/dioxus/" }
taffy = "0.3.12"
tokio = { version = "1.25.0", features = ["sync", "rt", "macros"] }
tao = { version = "0.21.0", features = ["serde"] }
raw-window-handle = "0.5.0"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
keyboard-types = "0.6.2"
rustc-hash = "1.1.0"
shipyard = {  version = "0.6.2", features = ["proc", "std"], default-features = false }
once_cell = "1.17.1"
image = "0.24.5"
quadtree_rs = "0.1.2"
beuk = { git = "https://github.com/dylanblokhuis/beuk", rev = "6722624444c1067d1546e10499fca8ef5ff16e4f" }
bytemuck = { version = "1.13.1", features = ["derive"] }
epaint = { version = "0.22.0", features = ["bytemuck", "default", "log"] }
dioxus-hot-reload = { git = "https://github.com/DioxusLabs/dioxus/", optional = true }

[features]
hot-reload = ["dioxus-hot-reload"]