[package]
name = "dioxus_beuk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus/", features = ["dioxus"] }
dioxus-native-core-macro = { git = "https://github.com/DioxusLabs/dioxus/" }
taffy = { git = "https://github.com/DioxusLabs/taffy/" }
tokio = { version = "1.25.0", features = ["sync", "rt", "macros", "time"] }
tao = { version = "0.22.0", features = ["serde"] }
raw-window-handle = "0.5.0"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
keyboard-types = "0.6.2"
rustc-hash = "1.1.0"
shipyard = {  version = "0.6.2", features = ["proc", "std"], default-features = false }
once_cell = "1.17.1"
image = "0.24.5"
beuk = { path = "../../beuk" }
bytemuck = { version = "1.13.1", features = ["derive"] }
epaint = { git = "https://github.com/emilk/egui", features = ["bytemuck", "default", "log"] }
dioxus-hot-reload = { git = "https://github.com/DioxusLabs/dioxus/", features = ["file_watcher"], optional = true }
tracing = "0.1"
log = "0.4"
usvg = "0.35.0"
resvg = "0.35.0"
uuid = { version = "1.2.2", features = ["v4"]}
tween = "2.0.1"

[features]
hot-reload = ["dioxus-hot-reload"]
